feat: obtendo tradução de sinopse via chat gpt